# Xor7Atlantis

./: AccountManager.cpp  AccountManager.h  AuthCore.cpp  AuthCore.h  AuthWebController.cpp  AuthWebController.h  AutomaticInstanceManager.cpp  AutomaticInstanceManager.h  ButtonBg.cpp  ButtonBg.h  CMakeLists.txt  DownloadCore.cpp  DownloadCore.h  DownloadThread.cpp  DownloadThread.h  InfoButton.cpp  InfoButton.h  LaunchCore.cpp  LaunchCore.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  MinecraftAccountBtn.cpp  MinecraftAccountBtn.h  MinecraftHead.cpp  MinecraftHead.h  Page.cpp  Page.h  ProfileManager.cpp  ProfileManager.h  README.md  ScrollArea.cpp  ScrollArea.h  SelfLockBtnBg.cpp  SelfLockBtnBg.h  SelfLockBtnBgInGroup.cpp  SelfLockBtnBgInGroup.h  Settings.cpp  Settings.h  (+10 more)
Download/: download-core.cpp  download-core.h
Images/: icon.rc  images.qrc
